<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userinterface.SettingsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:orientation="vertical"
            android:padding="5dp"
            android:rowCount="1">

            <LinearLayout
                android:layout_column="0"
                android:layout_rowWeight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0.5"
                    android:text="@string/settingsActivityLifeStoryLines"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0.5"
                    android:text="@string/settingsActivityLifeStoryDescription" />
            </LinearLayout>

            <Spinner
                android:id="@+id/settingsLifeStoryLinesSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_rowWeight="0.3"
                android:entries="@array/availableColors"/>

            <Switch
                android:id="@+id/settingsLifeStoryLinesSwitch"
                android:layout_column="2"
                android:layout_rowWeight="0.2" />

        </GridLayout>

        <GridLayout
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:orientation="vertical"
            android:padding="5dp"
            android:rowCount="1">

            <LinearLayout
                android:layout_column="0"
                android:layout_rowWeight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0.5"
                    android:text="@string/settingsActivityFamilyTreeLines"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0.5"
                    android:text="@string/settingsActivityFamilyTreeDescription" />
            </LinearLayout>

            <Spinner
                android:id="@+id/settingsFamilyTreeLinesSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_rowWeight="0.3"
                android:entries="@array/availableColors" />

            <Switch
                android:id="@+id/settingsFamilyTreeLinesSwitch"
                android:layout_column="2"
                android:layout_rowWeight="0.2" />

        </GridLayout>

        <GridLayout
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:orientation="vertical"
            android:padding="5dp"
            android:rowCount="1">

            <LinearLayout
                android:layout_column="0"
                android:layout_rowWeight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0.5"
                    android:text="@string/settingsActivitySpouseLines"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0.5"
                    android:text="@string/settingsActivitySpouseLinesDescription" />
            </LinearLayout>

            <Spinner
                android:id="@+id/settingsSpouseLinesSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_rowWeight="0.3"
                android:entries="@array/availableColors" />

            <Switch
                android:id="@+id/settingsSpouseLinesSwitch"
                android:layout_column="2"
                android:layout_rowWeight="0.2" />

        </GridLayout>

        <GridLayout
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:rowCount="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_rowWeight="0.6"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsActivityMapType"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsActivityMapTypeDescription" />
            </LinearLayout>

            <Spinner
                android:id="@+id/settingsMapTypeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="right"
                android:layout_rowWeight="0.4"
                android:entries="@array/settingsActivityMapTypes"
                android:paddingLeft="8dp"
                android:paddingStart="8dp" />
        </GridLayout>


        <LinearLayout
            android:id="@+id/settingsReSyncButton"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsActivityReSyncData"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingsActivityReSyncDataDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsLogoutButton"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsActivityLogoutButton"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsActivityLogoutDescription" />
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>