<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".userinterface.MapFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="top"
        android:layout_margin="12dp">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/fragmentMapTextDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/fragmentMapDefaultIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/eventIcon"
            android:textSize="36sp"
            android:padding="12dp"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@id/fragmentMapDefaultIcon"
            android:layout_toEndOf="@id/fragmentMapDefaultIcon"
            android:layout_marginEnd="26dp"
            android:columnCount="1"
            android:gravity="end"
            android:rowCount="2">

            <TextView
                android:id="@+id/fragmentMapTextTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragmentMapDefaultTextTop"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/fragmentMapTextBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragmentMapDefaultTextBottom"
                android:textSize="24sp" />

        </GridLayout>

    </RelativeLayout>

</LinearLayout>



